# escrow-contract-fuel

./: Cargo.toml  Forc.toml
src/: error.sw  escrow.sw  main.sw
tests/: harness.rs
tests/artifacts/asset/: Forc.toml
