[package]
name = "escrow-contract"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Akash SM <akashsm@ce.iitr.ac.in>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.35", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
rand = "0.8.4"


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
